UtahLiveDataTest/src/objects/TaskSchedule__c.object
<CustomObject>
    <description>[Business] Need more Detailed Description on this Objects</description>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalId>true</externalId>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SobjectName__c</fullName>
        <label>Sobject Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Task Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000}</displayFormat>
        <label>Task Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Schedule</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>